--- a/seriados/templates/base.html
+++ b/seriados/templates/base.html
@@ -1,22 +1,34 @@
-{% load {% static %}
-{% load il8n %}
+{% load static %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html lang="en">
-    <head> 
-        <title>Python para Negócios</title>
-        <meta charset="utf-8" />
+   <head>
+       <title>Python para Negócios</title>
+       <meta charset="utf-8">
 
-    </head>
+       <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
+       <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+           integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+           crossorigin="anonymous">
+       </script>
+       <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}" ></script>
+   </head>
+   <body>
+       <div class="container">
+           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+               <div class="container-fluid">
+                   {% block navbar %}
+                       {% include 'navbar.html' %}
+                   {% endblock %}
+               </div>
+           </nav>
 
-    <body>
-        <p> Bem vindo </p>
-        {% block content %}
-            <p>Não há nenhum conteúdo aqui!</p>
-        {% endblock %}
-
+           {% block content %}
+               <p>Não há nenhum conteúdo aqui!</p>
+           {% endblock %}
+       </div>
+   </body>
 </html>
 
 
-
-    </body>
