--- a/seriados/templates/temporada_confirm_delete.html
+++ b/seriados/templates/temporada_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-   Quer deletar a temporáda {{ object.numero }}  da Série {{ object.serie.nome }}? <br />
+   Você deseja deletar a temporada {{ object.numero }}  da Série {{ object.serie.nome }}? <br />
    <form action="" method="post">
        {% csrf_token %}
        <input type="submit" value="Delete">
