--- a/seriados/templates/navbar.html
+++ b/seriados/templates/navbar.html
@@ -8,6 +8,7 @@
    </button>
    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
        <li><a class="dropdown-item" href={% url 'seriados:episodio_list' %}>Todos</a></li>
+       <li><a class="dropdown-item" href={% url 'seriados:episodio_busca_list' %}>Busca Avançada</a></li>
        <li><a class="dropdown-item" href={% url 'seriados:episodio_nota_list' nota='A'%}>Nota A</a></li>
        <li><a class="dropdown-item" href={% url 'seriados:episodio_nota_list' nota='B'%}>Nota B</a></li>
        <li><a class="dropdown-item" href={% url 'seriados:episodio_nota_list' nota='C'%}>Nota C</a></li>
@@ -17,5 +18,17 @@
 <a class="navbar-brand" href={% url 'seriados:about' %}>Sobre</a>
 <a class="navbar-brand" href={% url 'seriados:contact' %}>Contato</a>
 <a class="navbar-brand" href={% url 'admin:index' %}>ADMIN</a>
+{% if user.is_authenticated %}
+   <div class="dropdown">
+       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+           Bem vindo, {{user.username}}
+       </button>
+       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+           <li><a class="dropdown-item" href={% url 'logout' %}>Logout</a></li>
+       </ul>
+   </div>
+{% else %}
+   <a class="navbar-brand" href={% url 'login' %}>Login</a>
+{% endif %}
 
 
