--- a/seriados/templates/home.html
+++ b/seriados/templates/home.html
@@ -5,7 +5,7 @@
 
 <div class="row">
    <div class="col-6 col-md-4">
-       <img src="{% static 'seriados/star-icon.png' %}" alt="imagem">
+       <img src="{% static 'seriados/mando2.png' %}" alt="imagem">
    </div>
    <div class="col-6 col-md-8">
        <h3>Procurar episódio</h3>
