--- a/seriados/templates/about.html
+++ b/seriados/templates/about.html
@@ -3,9 +3,9 @@
 {% load static %}
 
 {% block content %}
-Sistema para cadastro e reviews de Seriados!<br>
+Este é um sistema para cadastro de séries e filmes<br>
 
-<b>Curso de Especialização em Python para Negócios</b>
+<b>Atividade do módulo Django para Web</b>
 
 <p><a href="{% url 'seriados:contact' %}">Contato</a></p>
 {% endblock %}
