--- a/seriados/templates/contact.html
+++ b/seriados/templates/contact.html
@@ -4,8 +4,13 @@
 
 <h3>Contato</h3>
 
-<p><b>email:</b> contato@exemplo.com.br</p>
+<p><b>email:</b> chrisberenguer300@gmail.com</p>
 
-<p><a href="{% url 'seriados:about' %}">Sobre</a></p>
+<p><a href="{% url 'seriados:about' %}">Sobre </a></p>
+
+
+<div class="col-6 col-md-4">
+    <img src="{% static 'seriados/siliconvalley.jpg' %}" alt="imagem" width="1050" height="602">
+</div>
 
 {% endblock %}
