--- a/seriados/templates/base.html
+++ b/seriados/templates/base.html
@@ -14,10 +14,15 @@
        </script>
        <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}" ></script>
        
+       
+       <!--     Fixar navbar topo                     --> 
+    <script>
+    document.addEventListener("DOMContentLoaded", function(){ window.addEventListener('scroll', function() { if (window.scrollY > 50) { document.getElementById('navbar_top').classList.add('fixed-top'); navbar_height = document.querySelector('.navbar').offsetHeight; document.body.style.paddingTop = navbar_height + 'px'; } else { document.getElementById('navbar_top').classList.remove('fixed-top'); document.body.style.paddingTop = '0'; } }); }); </script>
+    
    </head>
    <body>
        <div class="container">
-           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+           <nav id="navbar_top" class="navbar navbar-expand-lg navbar-dark bg-dark">
                <div class="container-fluid">
                    {% block navbar %}
                        {% include 'navbar.html' %}
