--- a/seriados/templates/home.html
+++ b/seriados/templates/home.html
@@ -5,14 +5,17 @@
 
 <div class="row">
    <div class="col-6 col-md-4">
-       <img src="{% static 'seriados/mando2.png' %}" alt="imagem">
+       <img src="{% static 'seriados/seriesflix.png' %}" alt="imagem" width="1050" height="602">
    </div>
+  
    <div class="col-6 col-md-8">
        <h3>Procurar episódio</h3>
 
        <input id='input_search' type="text" placeholder="Search..">
        <button id="btn_search">Procurar Episódio</button>
    </div>
+
+   
 </div>
 
 <script type="text/javascript">
