--- a/seriados/templates/temporada_list.html
+++ b/seriados/templates/temporada_list.html
@@ -4,18 +4,24 @@
 <h1>Lista de Temporadas</h1>
 
 <table border="1px">
-   <tr>
-       <th>Série</th>
-       <th>Temporada</th>
-   </tr>
+    <tr>
+        <th>Série</th>
+        <th>Temporada</th>
+        
+    </tr>
+   
+    {% for object in object_list %}
+        <tr>
+            <td>{{ object.serie.nome }}</td>
+            <td>{{ object.numero }}</td>
+        </tr>
+    {% endfor %}
 
-   {% for object in object_list %}
-       <tr>
-           <td>{{ object.serie.nome }}</td>
-           <td>{{ object.numero }}</td>
-       </tr>
-   {% endfor %}
+   
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4fVe53CAO70" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
 </table>
+
+
 {% endblock %}
-
-
