--- a/seriados/templates/navbar.html
+++ b/seriados/templates/navbar.html
@@ -2,6 +2,9 @@
 <a class="navbar-brand" href={% url 'seriados:serie_list' %}>Series</a>
 <a class="navbar-brand" href={% url 'seriados:temporada_list' %}>Temporadas</a>
 
+
+
+
 <div class="dropdown">
    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
        Episódios
@@ -12,12 +15,25 @@
        <li><a class="dropdown-item" href={% url 'seriados:episodio_nota_list' nota='A'%}>Nota A</a></li>
        <li><a class="dropdown-item" href={% url 'seriados:episodio_nota_list' nota='B'%}>Nota B</a></li>
        <li><a class="dropdown-item" href={% url 'seriados:episodio_nota_list' nota='C'%}>Nota C</a></li>
-   </ul>
+    </ul>
 </div>
 
 <a class="navbar-brand" href={% url 'seriados:about' %}>Sobre</a>
 <a class="navbar-brand" href={% url 'seriados:contact' %}>Contato</a>
+<a class="navbar-brand" href={% url 'blog:post_list' %}>>>Blog<<</a> 
+
+
+
 <a class="navbar-brand" href={% url 'admin:index' %}>ADMIN</a>
+
+
+   
+
+
+
+
+
+
 {% if user.is_authenticated %}
    <div class="dropdown">
        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
@@ -30,5 +46,7 @@
 {% else %}
    <a class="navbar-brand" href={% url 'login' %}>Login</a>
 {% endif %}
+
+
 
 
